# qwenvl_sandbox

./: README.md  pyproject.toml
.claude/: settings.local.json
configs/: colab_dpo_config.yaml  colab_dpo_config_4b.yaml  colab_grpo_config.yaml  colab_grpo_config_4b.yaml  colab_sft_config.yaml  colab_sft_config_4b.yaml  dpo_config.yaml  dpo_config_4b.yaml  grpo_config.yaml  grpo_config_4b.yaml  sft_config.yaml  sft_config_4b.yaml
docs/: COLAB_TRAINING.md
notebooks/: qwen3_vl_training.ipynb
scripts/: __init__.py  colab_utils.py  download_datasets.py  evaluate.py  test_mlx.py  train_dpo.py  train_grpo.py  train_sft.py
src/: __init__.py
src/data/: __init__.py  collators.py  datasets.py
src/eval/: __init__.py  mlx_eval.py  spatial_eval.py
src/models/: __init__.py  mlx_inference.py  qwen_vl.py
src/training/: __init__.py  dpo_trainer.py  grpo_trainer.py  mlx_debug.py  reward_functions.py  sft_trainer.py  validation_utils.py
tests/: __init__.py  conftest.py  test_datasets.py  test_pipeline.py
